--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                         <a href="/nosotros.html" class="btn btn-warning btn-lg  mt-3">Conócenos mejor</a>
 
                     </div>
-                    <div class="col-md-6">
-                        <img src="/images/carouselHome/CasaLD-00.jpeg" alt="Historia de UnenGroup"
+                    <div class="col-md-6 imgHistoriaHome" >
+                        <img src="/images/logoConNombre.png" alt="Historia de UnenGroup"
                             class="img-fluid rounded">
                     </div>
                 </div>
