--- a/index.html
+++ b/index.html
@@ -175,11 +175,13 @@
                         <a href="/nosotros.html" class="btn btn-warning btn-lg  mt-3">Conócenos mejor</a>
 
                     </div>
-                    <div class="col-md-6 imgHistoriaHome" >
+                    <div class="col-md-6 justify-content-center imgHistoriaHome"  >
                         <img src="/images/logoConNombre.png" alt="Historia de UnenGroup"
                             class="img-fluid rounded">
                     </div>
                 </div>
+
+              
             </div>
         </section>
 
