--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     </div>
 
                     <!-- Redes Sociales -->
-                    <div class="col-md-6 animate__animated animate__fadeInRight">
+                    <div class="col-md-6 animate__animated animate__fadeInRight" id="contenedorSocialHome">
                         <div class="bg-white p-4 rounded shadow">
                             <h4 class="text-center mb-4">Síguenos en nuestras Redes Sociales</h4>
                             <div class="d-flex justify-content-center gap-3">
