--- a/nosotros.html
+++ b/nosotros.html
@@ -108,8 +108,9 @@
             <div class="content-overlay">
       
                 <div class="content-overlay">
-                    <h2 class="animate__animated animate__fadeInDown">Nuestros Objetivos</h2>
+                   
                     <div class="timeline">
+                        <h2 class="animate__animated animate__fadeInDown">Nuestros Objetivos</h2>
                         <!-- Item Corto Plazo -->
                         <div class="timeline-item" data-aos="fade-right">
                             <div class="timeline-content animate__animated animate__fadeInLeft">
@@ -136,7 +137,7 @@
         <section class="valores-section py-5">
             <div class="container">
                 <h2 class="text-center mb-4 animate__animated animate__fadeInUp">Visión, valores y misión</h2>
-                <div class="row justify-content-center align-items-center">
+                <div class="row justify-content-center align-items-center" id="row-masInfo">
                     <!-- Visión -->
                     <div class="col-md-4">
                         <div class="valor-card text-center p-4 shadow estaticContent estiloSwiper" data-aos="zoom-in">
