--- a/propiedades.html
+++ b/propiedades.html
@@ -85,22 +85,23 @@
 
   <main>
 
-  <!-- Hero Section Mejorado -->
-<section id="hero-propiedades" class="position-relative">
-  <!-- Imagen de Fondo -->
-  <div class="hero-background"></div>
-  
-  <!-- Capa Negra Transparente -->
-  <div class="hero-overlay"></div>
-  
-  <!-- Contenido del Hero -->
-  <div class="container text-center text-white position-relative hero-content animate__animated animate__fadeIn">
-    <h1 class="fw-bold display-4 animate__animated animate__fadeInUp"><span style="color: #887878;">Explora</span> Nuestras<span style="color: #71C6D4;"> Propiedades</span></h1>
-    <p class="lead animate__animated animate__fadeInUp animate__delay-1s">
-      Encuentra el lugar perfecto para tu hogar o inversión.
-    </p>
-  </div>
-</section>
+    <!-- Hero Section Mejorado -->
+    <section id="hero-propiedades" class="position-relative">
+      <!-- Imagen de Fondo -->
+      <div class="hero-background"></div>
+
+      <!-- Capa Negra Transparente -->
+      <div class="hero-overlay"></div>
+
+      <!-- Contenido del Hero -->
+      <div class="container text-center text-white position-relative hero-content animate__animated animate__fadeIn">
+        <h1 class="fw-bold display-4 animate__animated animate__fadeInUp"><span style="color: #887878;">Explora</span>
+          Nuestras<span style="color: #71C6D4;"> Propiedades</span></h1>
+        <p class="lead animate__animated animate__fadeInUp animate__delay-1s">
+          Encuentra el lugar perfecto para tu hogar o inversión.
+        </p>
+      </div>
+    </section>
 
 
     <!-- Filtros -->
@@ -134,14 +135,16 @@
         <div class="row" id="propiedadesContainer"></div>
       </div>
     </section>
-    
+
     <!-- Modal para Ver Más Información -->
-    <div class="modal fade" id="propertyDetailsModal" tabindex="-1" aria-labelledby="propertyDetailsModalLabel" aria-hidden="true">
+    <div class="modal fade" id="propertyDetailsModal" tabindex="-1" aria-labelledby="propertyDetailsModalLabel"
+      aria-hidden="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="propertyDetailsModalLabel">Detalles de la Propiedad</h5>
-            <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            <button style="background-color: white;" type="button" class="btn-close" data-bs-dismiss="modal"
+              aria-label="Cerrar"></button>
           </div>
           <div class="modal-body">
             <!-- Contenido dinámico aquí -->
@@ -150,7 +153,7 @@
         </div>
       </div>
     </div>
-    
+
 
     <!-- Formulario de Contacto -->
     <section id="contacto" class="py-5 bg-white">
@@ -196,11 +199,11 @@
         <!-- About Section -->
         <div class="col-md-8">
           <h5 class="text-uppercase mb-3">Sobre Nosotros</h5>
-          <div class="d-flex align-items-center">
+          <div class="d-flex align-items-center" id="espacioFotoMobile">
             <img src="/images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
               style="max-width: 150px; border-radius:50%;">
-            <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus sueños.
-              Ofrecemos
+            <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus
+              sueños. Ofrecemos
               asesoramiento personalizado y un amplio catálogo de propiedades.</p>
 
           </div>
@@ -209,7 +212,8 @@
         <div class="col-md-4">
           <h5 class="text-uppercase mb-3">Contacto</h5>
           <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Falsa 123, Ciudad</p>
-          <p id="telefonoFooter"><a href="http://"><i class="fas fa-phone"></i> Teléfono: +54 9 351 389 3394</p></a>
+          <p id="telefonoFooter"><a href="http://"><i class="fas fa-phone"></i> Teléfono: +54 9 351 389 3394
+          </p></a>
           <p><i class="fas fa-envelope"></i> Email: info@unengroup.com</p>
           <div class="social-icons">
             <a href="#" class="text-light me-2"><i class="fab fa-facebook-f"></i></a>
