--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             necesidades de nuestros clientes.</p>
                     </div>
                     <!-- Visión -->
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4 text-center" id="visionText">
                         <i class="fas fa-chart-line fa-3x text-warning mb-3"></i>
                         <h4 class="fw-bold">Nuestra Visión</h4>
                         <p>Ser líderes en innovación, confianza y calidad, con una red de corredores comprometidos en
