--- a/propiedades.html
+++ b/propiedades.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Meta SEO -->
-  <title>UnenGroup | Home</title>
+  <title>UnenGroup | Propiedades</title>
   <meta name="description" content="Descripción breve y precisa para buscadores.">
   <meta name="keywords" content="palabras clave, separadas, por, comas">
   <meta name="author" content="Tu Nombre o Empresa">
@@ -51,7 +51,7 @@
       <div class="container">
         <!-- Logo -->
         <a class="navbar-brand" href="/">
-          <img src="/images/logo.png" alt="Logo" style="height: 68px;" id="logoNavbar">
+          <img src="/images/logoConNombreHorizontalPrue.png" alt="Logo"  id="logoNavbar">
         </a>
         <!-- Toggle Button for Mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
