--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <section id="propiedades" class="py-5 bg-light">
             <h2 class="text-center fw-bold mb-4">PROPIEDADES DESTACADAS</h2>
             <div class="container mt-5">
-                <div class="row" id="propiedadesContainer"></div>
+                <div class="row d-flex align-content-center justify-content-center" id="propiedadesContainer"></div>
             </div>
         </section>
 
