--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <!-- Logo -->
                 <a class="navbar-brand" href="/">
-                    <img src="/images/logoConNombreHorizontalPrue.png" alt="Logo"  id="logoNavbar">
+                    <img src="/images/logoConNombreHorizontalPrue.png" alt="Logo" id="logoNavbar">
                 </a>
                 <!-- Toggle Button for Mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -175,13 +175,12 @@
                         <a href="/nosotros.html" class="btn btn-warning btn-lg  mt-3">Conócenos mejor</a>
 
                     </div>
-                    <div class="col-md-6 justify-content-center imgHistoriaHome"  >
-                        <img src="/images/logoConNombre.png" alt="Historia de UnenGroup"
-                            class="img-fluid rounded">
+                    <div class="col-md-6 justify-content-center imgHistoriaHome">
+                        <img src="/images/logoConNombre.png" alt="Historia de UnenGroup" class="img-fluid rounded">
                     </div>
                 </div>
 
-              
+
             </div>
         </section>
 
@@ -278,7 +277,8 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="propertyDetailsModalLabel">Detalles de la Propiedad</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"  style="background-color: white;"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"
+                            style="background-color: white;"></button>
                     </div>
                     <div class="modal-body">
                         <!-- Contenido dinámico aquí -->
@@ -295,7 +295,8 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="property360ModalTitle">Vista 360°</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="background-color: white;"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                            style="background-color: white;"></button>
                     </div>
                     <div class="modal-body">
                         <div id="pano360" style="width: 100%; height: 500px;"></div>
@@ -311,7 +312,7 @@
         <!-- •-----------------Tesatimoniales---------------- -->
 
         <section id="testimoniales" class="py-5 bg-light">
-            <div class="container">
+            <div class="container" style="overflow: hidden;">
                 <!-- Título de la sección -->
                 <div class="text-center mb-5">
                     <h2 class="fw-bold text-primary animate__animated animate__fadeInUp">Testimonios de Nuestros
@@ -329,8 +330,8 @@
                             <div
                                 class="testimonial-card p-4 shadow-sm rounded bg-white animate__animated animate__fadeInUp">
                                 <div class="testimonial-header d-flex align-items-center mb-3">
-                                    <img src="/images//team-3.jpg" alt="Cliente 1" class="rounded-circle me-3" width="60"
-                                        height="auto">
+                                    <img src="/images//team-3.jpg" alt="Cliente 1" class="rounded-circle me-3"
+                                        width="60" height="auto">
                                     <div>
                                         <h5 class="fw-bold mb-0 text-secondary">Juan Pérez</h5>
                                         <small class="text-muted">Comprador</small>
@@ -355,8 +356,8 @@
                             <div
                                 class="testimonial-card p-4 shadow-sm rounded bg-white animate__animated animate__fadeInUp">
                                 <div class="testimonial-header d-flex align-items-center mb-3">
-                                    <img src="/images//team-2.jpg" alt="Cliente 2" class="rounded-circle me-3" width="60"
-                                        height="auto">
+                                    <img src="/images//team-2.jpg" alt="Cliente 2" class="rounded-circle me-3"
+                                        width="60" height="auto">
                                     <div>
                                         <h5 class="fw-bold mb-0 text-secondary">Ana López</h5>
                                         <small class="text-muted">Propietaria</small>
@@ -380,8 +381,8 @@
                             <div
                                 class="testimonial-card p-4 shadow-sm rounded bg-white animate__animated animate__fadeInUp">
                                 <div class="testimonial-header d-flex align-items-center mb-3">
-                                    <img src="/images//team-1.jpg" alt="Cliente 3" class="rounded-circle me-3" width="60"
-                                        height="auto">
+                                    <img src="/images//team-1.jpg" alt="Cliente 3" class="rounded-circle me-3"
+                                        width="60" height="auto">
                                     <div>
                                         <h5 class="fw-bold mb-0 text-secondary">Carlos García</h5>
                                         <small class="text-muted">Inversionista</small>
@@ -520,7 +521,11 @@
         </div>
     </footer>
 
-
+    <!-- Botón de WhatsApp -->
+    <a href="https://wa.me/5493516837691" class="whatsapp-button" target="_blank" aria-label="Chat en WhatsApp">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"
+            class="whatsapp-icon">
+    </a>
 
     <!-- Librerías JS al final del body para mejor rendimiento -->
     <!-- Bootstrap -->
