--- a/propiedades.html
+++ b/propiedades.html
@@ -51,7 +51,7 @@
       <div class="container">
         <!-- Logo -->
         <a class="navbar-brand" href="/">
-          <img src="/images/logoConNombreHorizontalPrue.png" alt="Logo"  id="logoNavbar">
+          <img src="/images/logoConNombreHorizontalPrue.png" alt="Logo" id="logoNavbar">
         </a>
         <!-- Toggle Button for Mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -232,6 +232,10 @@
     </div>
   </footer>
 
+  <!-- Botón de WhatsApp -->
+  <a href="https://wa.me/5493516837691" class="whatsapp-button" target="_blank" aria-label="Chat en WhatsApp">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
+  </a>
 
   <!-- Librerías JS al final del body para mejor rendimiento -->
   <!-- Bootstrap -->
