--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Icono del Sitio -->
-    <link rel="icon" href="/images/logoConNombre.png" type="image/x-icon">
+    <link rel="icon" href="/images/logo.png" type="image/x-icon">
 
     <!-- CSS Frameworks y Librerías -->
     <!-- Bootstrap -->
@@ -68,8 +68,36 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#servicios">Servicios</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/propiedades.html">Propiedades</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="/propiedades.html" id="navbarDropdown"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Tipos de propiedades
+                            </a>
+                            <ul class="dropdown-menu animate__animated ulProps" aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=alquiler">Alquiler </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=venta">Venta</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler
+                                        Temporario</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler
+                                        Vacacional</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=terreno">Terrenos</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=local">Locales</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/nosotros.html">Nosotros</a>
@@ -78,6 +106,7 @@
                             <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
@@ -238,7 +267,8 @@
                                 <i class="fas fa-balance-scale fa-3x text-warning mb-3"></i>
                                 <h4 class="fw-bold">Tasaciones</h4>
                                 <p>Solicita una evaluación profesional y precisa para tu propiedad hoy mismo.</p>
-                                <a href="#" class="btn btn-warning">Solicitar Tasación</a>
+                                <a href="#contacto" onclick="setContactType('tasaciones')"
+                                    class="btn btn-warning">Solicitar Tasación</a>
                             </div>
                         </div>
                     </div>
@@ -438,8 +468,9 @@
                                     <option value="" disabled selected>Seleccione un tipo de contacto</option>
                                     <option value="inversiones">Inversiones</option>
                                     <option value="alquiler">Alquiler</option>
-                                    <option value="consulta">Consulta</option>
                                     <option value="soy-propietario">Soy propietario</option>
+                                    <option value="tasaciones">Tasaciones</option>
+                                    <option value="consulta">Consulta</option>
                                     <option value="otro">Otro</option>
                                 </select>
                             </div>
@@ -470,7 +501,7 @@
                                     <i class="fab fa-linkedin-in fa-2x"></i>
                                 </a>
                             </div>
-                            <p class="text-center mt-4">O llámanos al <strong>+54 9 351 389 3394</strong></p>
+                            <p class="text-center mt-4">O llámanos al <strong>+54 9 351 6837691</strong></p>
                         </div>
                     </div>
                 </div>
@@ -500,14 +531,17 @@
                 <!-- Contact Section -->
                 <div class="col-md-4">
                     <h5 class="text-uppercase mb-3">Contacto</h5>
-                    <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Falsa 123, Ciudad</p>
-                    <p id="telefonoFooter"><a href="http://"><i class="fas fa-phone"></i> Teléfono: +54 9 351 389 3394
+                    <p id="telefonoFooter"><a href="https://wa.me/5493516837691"><i class="fas fa-phone"></i> Teléfono:
+                            +54
+                            9 351 6837691
                     </p></a>
-                    <p><i class="fas fa-envelope"></i> Email: info@unengroup.com</p>
+                    <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
+                            info@unengroup.com.ar</a></p>
                     <div class="social-icons">
-                        <a href="#" class="text-light me-2"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-light me-2"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-light me-2"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i
+                                class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -515,7 +549,8 @@
             <div class="row">
                 <div class="col text-center">
                     <p class="mb-0">&copy; 2024 <a class="linkSenestrariDev"
-                            href="https://senestraridev.com/">Senestrari Dev.</a> Todos los derechos reservados.</p>
+                            href="https://senestraridev.com/">Senestrari
+                            Dev.</a> Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
