--- a/propiedades.html
+++ b/propiedades.html
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Icono del Sitio -->
-  <link rel="icon" href="/images/logoConNombre.png" type="image/x-icon">
+  <link rel="icon" href="/images/logo.png" type="image/x-icon">
 
   <!-- CSS Frameworks y Librerías -->
   <!-- Bootstrap -->
@@ -67,8 +67,34 @@
             <li class="nav-item">
               <a class="nav-link" href="/#servicios">Servicios</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/propiedades.html">Propiedades</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="/propiedades.html" id="navbarDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Tipos de propiedades
+              </a>
+              <ul class="dropdown-menu animate__animated" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler">Alquiler </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="propiedades.html?tipo=venta">Venta</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler Temporario</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario">Alquiler Vacacional</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="propiedades.html?tipo=terreno">Terrenos</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="propiedades.html?tipo=local">Locales</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/nosotros.html">Nosotros</a>
@@ -114,6 +140,8 @@
               <option value="all">Todas</option>
               <option value="venta">Venta</option>
               <option value="alquiler">Alquiler</option>
+              <option value="terreno">Terrenos</option>
+              <option value="local">Locales</option>
               <option value="alquiler-temporario">Alquiler Temporario</option>
             </select>
           </div>
@@ -211,14 +239,14 @@
         <!-- Contact Section -->
         <div class="col-md-4">
           <h5 class="text-uppercase mb-3">Contacto</h5>
-          <p><i class="fas fa-map-marker-alt"></i> Dirección: Calle Falsa 123, Ciudad</p>
-          <p id="telefonoFooter"><a href="http://"><i class="fas fa-phone"></i> Teléfono: +54 9 351 389 3394
+          <p id="telefonoFooter"><a href="https://wa.me/5493516837691"><i class="fas fa-phone"></i> Teléfono: +54 9 351
+              6837691
           </p></a>
-          <p><i class="fas fa-envelope"></i> Email: info@unengroup.com</p>
+          <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
+              info@unengroup.com.ar</a></p>
           <div class="social-icons">
-            <a href="#" class="text-light me-2"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-light me-2"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="text-light me-2"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/coty_gg/" class="text-light me-2"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/coty.garcia" class="text-light me-2"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
       </div>
