--- a/index.html
+++ b/index.html
@@ -166,21 +166,21 @@
                     <!-- Misión -->
                     <div class="col-md-4 text-center">
                         <i class="fas fa-handshake fa-3x text-warning mb-3"></i>
-                        <h4 class="fw-bold">Nuestra Misión</h4>
+                        <h4 class="fw-bold">Nuestra misión</h4>
                         <p>Brindamos soluciones inmobiliarias personalizadas, seguras y confiables, adaptadas a las
                             necesidades de nuestros clientes.</p>
                     </div>
                     <!-- Visión -->
                     <div class="col-md-4 text-center" id="visionText">
                         <i class="fas fa-chart-line fa-3x text-warning mb-3"></i>
-                        <h4 class="fw-bold">Nuestra Visión</h4>
+                        <h4 class="fw-bold">Nuestra visión</h4>
                         <p>Ser líderes en innovación, confianza y calidad, con una red de corredores comprometidos en
                             ofrecer soluciones integrales.</p>
                     </div>
                     <!-- Valores -->
                     <div class="col-md-4 text-center">
                         <i class="fas fa-heart fa-3x text-warning mb-3"></i>
-                        <h4 class="fw-bold">Nuestros Valores</h4>
+                        <h4 class="fw-bold">Nuestros valores</h4>
                         <ul class="list-unstyled">
                             <li>Personalización</li>
                             <li>Excelencia</li>
@@ -196,7 +196,7 @@
                 <!-- Historia -->
                 <div class="row align-items-center ">
                     <div class="col-md-6 text-center historiaHome">
-                        <h3 class="fw-bold">Nuestros Objetivos</h3>
+                        <h3 class="fw-bold">Nuestros objetivos</h3>
                         <p>Ampliamos nuestra red de agentes y servicios, con foco en sostenibilidad y eficiencia
                             energética, mientras asesoramos en inversiones de Real Estate. A corto plazo, buscamos
                             liderar en ventas, alquileres y tasaciones; a largo plazo, ofrecer gestión estratégica de
@@ -216,7 +216,7 @@
         <section id="servicios" class="py-5 bg-light">
             <div class="container">
                 <!-- Encabezado -->
-                <h2 class="text-center fw-bold mb-4">Nuestros Servicios</h2>
+                <h2 class="text-center fw-bold mb-4">Nuestros servicios</h2>
                 <p class="text-center mb-5">Soluciones personalizadas para todas las necesidades inmobiliarias. Déjanos
                     ayudarte.</p>
 
@@ -227,7 +227,7 @@
                         <div class="card servicio-card">
                             <div class="card-body">
                                 <i class="fas fa-home fa-3x text-warning mb-3"></i>
-                                <h4 class="fw-bold">Venta de Propiedades</h4>
+                                <h4 class="fw-bold">Venta de propiedades</h4>
                                 <p>Encuentra el hogar perfecto con nuestro apoyo y asistencia especializada.</p>
                                 <a href="/propiedades.html" class="btn btn-warning">Ver propiedades</a>
                             </div>
@@ -250,7 +250,7 @@
                         <div class="card servicio-card">
                             <div class="card-body">
                                 <i class="fas fa-calendar-alt fa-3x text-warning mb-3"></i>
-                                <h4 class="fw-bold">Alquiler Temporario </h4>
+                                <h4 class="fw-bold">Alquiler temporario </h4>
                                 <p>Gestionamos alquileres temporales para maximizar tus ingresos fácilmente.</p>
                                 <a href="/propiedades.html?tipo=alquiler-temporario" class="btn btn-warning">Tu lugar
                                     temporal te espera</a>
@@ -294,7 +294,7 @@
 
         <!-- Lista de Propiedades -->
         <section id="propiedades" class="py-5 bg-light">
-            <h2 class="text-center fw-bold mb-4">PROPIEDADES DESTACADAS</h2>
+            <h2 class="text-center fw-bold mb-4">Propiedades destacadas</h2>
             <div class="container mt-5">
                 <div class="row d-flex align-content-center justify-content-center" id="propiedadesContainer"></div>
             </div>
@@ -345,8 +345,8 @@
             <div class="container" style="overflow: hidden;">
                 <!-- Título de la sección -->
                 <div class="text-center mb-5">
-                    <h2 class="fw-bold text-primary animate__animated animate__fadeInUp">Testimonios de Nuestros
-                        Clientes</h2>
+                    <h2 class="fw-bold text-primary animate__animated animate__fadeInUp">Testimonios de nuestros
+                        clientes</h2>
                     <p class="text-muted animate__animated animate__fadeInUp animate__delay-1s">
                         Escucha lo que nuestros clientes tienen que decir sobre nosotros.
                     </p>
@@ -354,7 +354,7 @@
 
                 <!-- Swiper Container -->
                 <div class="swiper-container testimonial-slider">
-                    <div class="swiper-wrapper" style="">
+                    <div class="swiper-wrapper">
                         <!-- Testimonial 1 -->
                         <div class="swiper-slide">
                             <div
@@ -458,12 +458,12 @@
                                     placeholder="Tu Nombre" required>
                             </div>
                             <div class="mb-3">
-                                <label for="email" class="form-label">Correo Electrónico</label>
+                                <label for="email" class="form-label">Correo electrónico</label>
                                 <input type="email" id="email" name="email" class="form-control" placeholder="Tu Correo"
                                     required>
                             </div>
                             <div class="mb-3">
-                                <label for="tipoContacto" class="form-label">Tipo de Contacto</label>
+                                <label for="tipoContacto" class="form-label">Tipo de contacto</label>
                                 <select id="tipoContacto" name="tipoContacto" class="form-control" required>
                                     <option value="" disabled selected>Seleccione un tipo de contacto</option>
                                     <option value="inversiones">Inversiones</option>
@@ -479,14 +479,14 @@
                                 <textarea id="mensaje" name="mensaje" class="form-control" rows="4"
                                     placeholder="Escribe tu mensaje aquí" required></textarea>
                             </div>
-                            <button type="submit" class="btn btn-warning w-100 fw-bold">Enviar Mensaje</button>
+                            <button type="submit" class="btn btn-warning w-100 fw-bold">Enviar mensaje</button>
                         </form>
                     </div>
 
                     <!-- Redes Sociales -->
                     <div class="col-md-6 animate__animated animate__fadeInRight" id="contenedorSocialHome">
                         <div class="bg-white p-4 rounded shadow">
-                            <h4 class="text-center mb-4">Síguenos en nuestras Redes Sociales</h4>
+                            <h4 class="text-center mb-4">Síguenos en nuestras redes sociales</h4>
                             <div class="d-flex justify-content-center gap-3">
                                 <a href="#" class="text-decoration-none text-dark">
                                     <i class="fab fa-facebook-f fa-2x"></i>
@@ -518,7 +518,7 @@
             <div class="row">
                 <!-- About Section -->
                 <div class="col-md-8">
-                    <h5 class="text-uppercase mb-3">Sobre Nosotros</h5>
+                    <h5 class="text-uppercase mb-3">Sobre nosotros</h5>
                     <div class="d-flex align-items-center" id="espacioFotoMobile">
                         <img src="/images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
                             style="max-width: 150px; border-radius:50%;">
