cambios servicios y footer

--- a/nosotros.html
+++ b/nosotros.html
@@ -118,7 +118,7 @@
             <div class="overlay"></div>
             <div class="hero-content animate__animated animate__fadeIn">
                 <h1>Conoce a <span style="color: #71C6D4;">UnenGroup</span></h1>
-                <p>Más de 10 años ayudando a nuestros clientes a encontrar el hogar de sus sueños.</p>
+                <p>Comprometidos a ayudarte a encontrar el hogar ideal<br> para construir nuevas historias y momentos inolvidables.</p>
                 <a href="#secContacto" class="btn btn-warning">Contáctanos</a>
             </div>
         </section>
@@ -421,7 +421,8 @@
                 <div class="col-md-4">
                     <h5 class="text-uppercase mb-3">Contacto</h5>
                     <p id="telefonoFooter"><a href="https://wa.me/5493516837691"><i class="fas fa-phone"></i> Teléfono:
-                            +54 9 351 6837691
+                            +54
+                            9 351 6837691
                     </p></a>
                     <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
                             info@unengroup.com.ar</a></p>
@@ -435,9 +436,18 @@
             </div>
             <hr class="my-4">
             <div class="row">
-                <div class="col text-center">
-                    <p class="mb-0">&copy; 2024 <a class="linkSenestrariDev"
-                            href="https://senestraridev.com/">Senestrari Dev.</a> Todos los derechos reservados.</p>
+                <div class="col text-start">
+                    <p>
+                        <h7 style="color: #71C6D4;" class="text-uppercase fw-bold">Legales</h7><br><small>La información detallada es exclusiva de Unen Group Real Estate y es
+                            susceptible a modificación sin previo aviso. Todas las medidas enunciadas son meramente
+                            orientativas, las medidas exactas serán las que se expresen en el respectivo título de
+                            propiedad de cada inmueble. Todas las fotos, imágenes y videos son meramente ilustrativos,
+                            referenciales y no contractuales. Los precios enunciados son meramente orientativos y están
+                            sujetos a modificación sin previo aviso, como así también su disponibilidad.</small>
+                    </p>
+                    <p class="mb-0 text-center">&copy; 2024 <a class="linkSenestrariDev"
+                            href="https://senestraridev.com/">Senestrari
+                            Dev.</a> Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
