--- a/propiedades.html
+++ b/propiedades.html
@@ -141,7 +141,7 @@
               <option value="venta">Venta</option>
               <option value="alquiler">Alquiler</option>
               <option value="terreno">Terrenos</option>
-              <option value="local">Locales</option>
+              <option value="local-oficina">Locales | Oficinas</option>
               <option value="alquiler-temporario">Alquiler Temporario</option>
             </select>
           </div>
@@ -220,7 +220,6 @@
 
   </main>
 
-
   <footer class="text-light pt-5 pb-3">
     <div class="container">
       <div class="row">
@@ -239,8 +238,9 @@
         <!-- Contact Section -->
         <div class="col-md-4">
           <h5 class="text-uppercase mb-3">Contacto</h5>
-          <p id="telefonoFooter"><a href="https://wa.me/5493516837691"><i class="fas fa-phone"></i> Teléfono: +54 9 351
-              6837691
+          <p id="telefonoFooter"><a href="https://wa.me/5493516837691"><i class="fas fa-phone"></i> Teléfono:
+              +54
+              9 351 6837691
           </p></a>
           <p id="telefonoFooter"><a href="mailto:info@unengroup.com.ar"><i class="fas fa-envelope"></i>
               info@unengroup.com.ar</a></p>
@@ -252,14 +252,23 @@
       </div>
       <hr class="my-4">
       <div class="row">
-        <div class="col text-center">
-          <p class="mb-0">&copy; 2024 <a class="linkSenestrariDev" href="https://senestraridev.com/">Senestrari Dev.</a>
-            Todos los derechos reservados.</p>
+        <div class="col text-start">
+          <p>
+            <h7 style="color: #71C6D4;" class="text-uppercase fw-bold">Legales</h7><br><small>La información detallada
+              es exclusiva de Unen Group Real Estate y es
+              susceptible a modificación sin previo aviso. Todas las medidas enunciadas son meramente
+              orientativas, las medidas exactas serán las que se expresen en el respectivo título de
+              propiedad de cada inmueble. Todas las fotos, imágenes y videos son meramente ilustrativos,
+              referenciales y no contractuales. Los precios enunciados son meramente orientativos y están
+              sujetos a modificación sin previo aviso, como así también su disponibilidad.</small>
+          </p>
+          <p class="mb-0 text-center">&copy; 2024 <a class="linkSenestrariDev"
+              href="https://senestraridev.com/">Senestrari
+              Dev.</a> Todos los derechos reservados.</p>
         </div>
       </div>
     </div>
   </footer>
-
   <!-- Botón de WhatsApp -->
   <a href="https://wa.me/5493516837691" class="whatsapp-button" target="_blank" aria-label="Chat en WhatsApp">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
