cambios servicios y footer

--- a/index.html
+++ b/index.html
@@ -227,13 +227,11 @@
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="card servicio-card">
                             <div class="card-body">
-                                <div class="container">
-                                    <img src="./images/servicios/Venta-propiedades.jpg"
+                                <img src="./images/servicios/Venta-propiedades.jpg"
                                         alt="venta de propiedades por Unen Group"
                                         style="width: 100%; border-radius: 10px;">
-                                </div>
-                                <h4 class="fw-bold my-3">Venta de propiedades</h4>
-                                <p>Encuentra el hogar perfecto con asesoramiento personalizado y una experiencia sin
+                                <h4 class="fw-bold my-3 text-start">Venta de propiedades</h4>
+                                <p class="text-start">Encuentra el hogar perfecto con asesoramiento personalizado y una experiencia sin
                                     complicaciones</p>
                                 <div class="d-flex justify-content-center flex-column gap-2">
                                     <a href="/propiedades.html" class="btn btn-warning">Ver propiedades</a>
@@ -246,13 +244,11 @@
 
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="card servicio-card">
-                            <div class="card-body">
-                                <div class="container">
-                                    <img src="./images/servicios/Alquiler.jpg" alt="venta de propiedades por Unen Group"
+                            <div class="card-body">                                
+                                <img src="./images/servicios/Alquiler.jpg" alt="venta de propiedades por Unen Group"
                                         style="width: 100%; border-radius: 10px;">
-                                </div>
-                                <h4 class="fw-bold my-3">Alquiler</h4>
-                                <p>Opciones de alquiler flexibles para corto o largo plazo, adaptadas a tus necesidades.
+                                <h4 class="fw-bold my-3 text-start">Alquiler</h4>
+                                <p class="text-start">Opciones de alquiler flexibles para corto o largo plazo, adaptadas a tus necesidades.
                                 </p>
                                 <div class="d-flex justify-content-center flex-column gap-2">
                                     <a href="/propiedades.html?tipo=alquiler" class="btn btn-warning">Encuentra tu
@@ -268,13 +264,11 @@
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="card servicio-card">
                             <div class="card-body">
-                                <div class="container">
-                                    <img src="./images/servicios/Alquiler-temporario.jpg"
-                                        alt="venta de propiedades por Unen Group"
-                                        style="width: 100%; border-radius: 10px;">
-                                </div>
-                                <h4 class="fw-bold my-3">Alquiler temporario </h4>
-                                <p>Alquileres por días o meses con propiedades amobladas, ideales para estancias
+                                <img src="./images/servicios/Alquiler-temporario.jpg"
+                                alt="venta de propiedades por Unen Group"
+                                style="width: 100%; border-radius: 10px;">
+                                <h4 class="fw-bold my-3 text-start">Alquiler temporario </h4>
+                                <p class="text-start">Alquileres por días o meses con propiedades amobladas, ideales para estancias
                                     cómodas.</p>
                                 <div class="d-flex justify-content-center flex-column gap-2">
                                     <a href="/propiedades.html?tipo=alquiler-temporario" class="btn btn-warning">Tu
@@ -286,20 +280,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <!-- Fila 2 -->
-                <div class="row g-4 justify-content-center mt-4">
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="card servicio-card">
                             <div class="card-body">
-                                <div class="container">
-                                    <img src="./images/servicios/compra-propiedades.jpg"
-                                        alt="venta de propiedades por Unen Group"
-                                        style="width: 100%; border-radius: 10px;">
-                                </div>
-                                <h4 class="fw-bold my-3">Compra de propiedades</h4>
-                                <p>Compra tu casa, terreno o local con confianza y un equipo experto a tu lado.</p>
+                                <img src="./images/servicios/compra-propiedades.jpg"
+                                alt="venta de propiedades por Unen Group"
+                                style="width: 100%; border-radius: 10px;">
+                                <h4 class="fw-bold my-3 text-start">Compra de propiedades</h4>
+                                <p class="text-start" style="min-height: 115px;">Compra tu casa, terreno o local con confianza y un equipo experto a tu lado.</p>
 
                                 <div class="d-flex justify-content-center flex-column gap-2">
                                     <a href="#contacto" onclick="setContactType('quiero-vender')"
@@ -314,13 +302,11 @@
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="card servicio-card">
                             <div class="card-body">
-                                <div class="container">
-                                    <img src="./images/servicios/administracion-prop.jpg"
-                                        alt="venta de propiedades por Unen Group"
-                                        style="width: 100%; border-radius: 10px;">
-                                </div>
-                                <h4 class="fw-bold my-3">Administración de propiedades</h4>
-                                <p>Tu tranquilidad, nuestra responsabilidad: gestionamos tu propiedad como si fuera
+                                <img src="./images/servicios/administracion-prop.jpg"
+                                alt="venta de propiedades por Unen Group"
+                                style="width: 100%; border-radius: 10px;">
+                                <h4 class="fw-bold my-3 text-start">Administración de propiedades</h4>
+                                <p class="text-start">Tu tranquilidad, nuestra responsabilidad: gestionamos tu propiedad como si fuera
                                     nuestra.</p>
                                 <div class="d-flex flex-column justify-content-center gap-2">
                                     <a href="#contacto" class="btn btn-warning"
@@ -335,13 +321,11 @@
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="card servicio-card">
                             <div class="card-body ">
-                                <div class="container">
-                                    <img src="./images/servicios/tasacion.jpg"
-                                        alt="venta de propiedades por Unen Group"
-                                        style="width: 100%; border-radius: 10px;">
-                                </div>
-                                <h4 class="fw-bold my-3">Tasaciones</h4>
-                                <p>Determinamos el valor real de tu propiedad para garantizar decisiones inteligentes.
+                                <img src="./images/servicios/tasacion.jpg"
+                                alt="venta de propiedades por Unen Group"
+                                style="width: 100%; border-radius: 10px;">
+                                <h4 class="fw-bold my-3 text-start">Tasaciones</h4>
+                                <p class="text-start" style="min-height: 115px;">Determinamos el valor real de tu propiedad para garantizar decisiones inteligentes.
                                 </p>
                                 <div class="d-flex flex-column justify-content-center gap-2 ">
                                     <a href="#contacto" onclick="setContactType('tasaciones')"
@@ -353,6 +337,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <!-- Fila 2 -->
+                <div class="row g-4 justify-content-center mt-4">
+                    
                 </div>
              
             </div>
